--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>vinayakgavariya</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,13 +22,16 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span> Vinayak Gavariya.</span>
-                    A Web Developer.
+                    hey, i'm <span> vinayak gavariya.</span>
+                  
                 </h1>
+                <h2><br>  developer,community builder,tech advocate</h2>
                 <p>
-                    I'm a Developer and Community Enthusiast, I love to connect, network and learn from new folks.
-                    I solve the problems around me by writing code.
-                    <!-- Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut! -->
+                    Hey there! 👋 I'm a front-end developer with a passion for data science.
+                    I love building tech communities and organizing workshops to help fellow developers grow.<br>
+                    <br><br> As a Gold Microsoft Learn Student Ambassador, Community Manager, and Google Developer Student Clubs Lead '22, I thrive on empowering tech communities and fostering growth. <br><br>
+                    Also, you can find my blogs at Microsoft Tech Community. Feel free to explore! 📝<br> <br>
+                    Let's connect and create something amazing! 🌟🚀<br>
                 </p>
                 <!-- <div class="btn-con">
                     <a href="" class="main-btn">
@@ -66,24 +69,23 @@
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
                     </div> -->
-                </div>
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">10+</p>
-                            <p class="small-text">Projects <br /> Completed</p>
+                            <p class="large-text">50+</p>
+                            <p class="small-text">Tech Workshops, Sessions, Events organized.🔧  <br /> </p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">100+</p>
-                            <p class="small-text">Community Events <br /> Organized</p>
+                            <p class="large-text">50+</p>
+                            <p class="small-text">tech community collaborations and partnerships.🤝 <br /> </p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">1.5 </p>
-                            <p class="small-text">Years<br /> of Experince </p>
+                            <p class="large-text">50+ </p>
+                            <p class="small-text"> I've organized tech events, sessions, and workshops, empowering developer! 🌟🔧<br />  </p>
                         </div>
                     </div>
                     <div class="about-item">
